--- a/frontend/src/components/ProductCard/ProductCard.scss
+++ b/frontend/src/components/ProductCard/ProductCard.scss
@@ -25,6 +25,19 @@
         }
     }
 
+    @include tablet {
+        width: calc(33.33% - 12px);
+    }
+
+    @include mobile {
+        width: calc(50% - 8px);
+        border-radius: 20px;
+    }
+
+    @include mobile-small {
+        width: 100%;
+    }
+
     &__category {
         position: absolute;
         top: 30px;
@@ -41,6 +54,7 @@
     &__image {
         filter: brightness(97%);
         border-radius: 30px;
+        margin-inline: auto;
     }
 
     &__title {
