--- a/frontend/src/components/ProductsWrap/ProductsWrap.scss
+++ b/frontend/src/components/ProductsWrap/ProductsWrap.scss
@@ -16,4 +16,13 @@
     @include mobile-small {
         gap: 12px;
     }
+
+    &__button {
+        margin-top: 60px;
+        margin-inline: auto;
+
+        @include mobile {
+            margin-top: 30px;
+        }
+    }
 }
