styles(organic): write adaptive SCSS styles for OrganicSection component

--- a/frontend/src/styles/_globals.scss
+++ b/frontend/src/styles/_globals.scss
@@ -46,6 +46,6 @@ body::-webkit-scrollbar {
 //     outline: 1px solid green;
 // }
 
-// * {
-//     outline: 1px solid green;
-// }
+* {
+    outline: 1px solid green;
+}
