--- a/frontend/src/components/TeamSection/TeamSection.scss
+++ b/frontend/src/components/TeamSection/TeamSection.scss
@@ -4,6 +4,22 @@
 
     &__inner {
         padding-block: 150px 120px;
+
+        @include laptop {
+            padding-block: 120px 100px;
+        }
+
+        @include tablet {
+            padding-block: 100px 80px;
+        }
+
+        @include mobile {
+            padding-block: 80px 60px;
+        }
+
+        @include mobile-small {
+            padding-block: 60px 40px;
+        }
     }
 
     &__row {}
@@ -18,6 +34,11 @@
 
     &__title {
         margin-inline: auto;
+        text-align: center;
+
+        @include mobile-small {
+            width: 90%;
+        }
     }
 
     &__description {
@@ -25,10 +46,22 @@
         margin-top: 16px;
         margin-inline: auto;
         text-align: center;
+
+        @include mobile {
+            width: 80%;
+        }
+
+        @include mobile-small {
+            width: 90%;
+        }
     }
 
     &__row--2 {
         padding-top: 40px;
+
+        @include mobile {
+            padding-top: 25px;
+        }
     }
 
     &__experts-wrap {
@@ -36,5 +69,17 @@
         flex-wrap: wrap;
         column-gap: 27px;
         row-gap: 40px;
+
+        @include tablet {
+            column-gap: 24px;
+        }
+
+        @include mobile {
+            row-gap: 25px;
+        }
+
+        @include mobile-small {
+            column-gap: 0;
+        }
     }
 }
