--- a/frontend/src/components/LocationSection/LocationSection.scss
+++ b/frontend/src/components/LocationSection/LocationSection.scss
@@ -4,6 +4,22 @@
 
     &__inner {
         padding-bottom: 120px;
+
+        @include laptop {
+            padding-bottom: 100px;
+        }
+
+        @include tablet {
+            padding-bottom: 80px;
+        }
+
+        @include mobile {
+            padding-bottom: 60px;
+        }
+
+        @include mobile-small {
+            padding-bottom: 40px;
+        }
     }
 
     &__row {}
@@ -25,6 +41,14 @@
         background-position: center;
         border-radius: 30px;
         padding: 120px 110px;
+
+        @include mobile {
+            padding: 60px 50px;
+        }
+
+        @include mobile-small {
+            padding: 30px 20px;
+        }
     }
 
     &__content-wrap {
@@ -34,6 +58,14 @@
         width: 515px;
         background-color: var(--color-white);
         border-radius: 30px;
+
+        @include mobile {
+            width: 100%;
+        }
+
+        @include mobile-small {
+            padding: 20px 25px;
+        }
     }
 
     &__promo {}
@@ -96,6 +128,10 @@
         display: flex;
         flex-wrap: wrap;
         gap: 50px;
+
+        @include mobile {
+            gap: 30px;
+        }
     }
 
     &__label {
@@ -106,6 +142,10 @@
         @include fluid-text(18, 16);
         @include font(var(--font-family), 600, 1);
         color: var(--color-blue);
+
+        @include mobile {
+            width: 100%;
+        }
     }
 
     &__label--name {}
