fix(global): fix some inaccuracies in links in various components

--- a/frontend/src/components/CreativeSection/CreativeSection.scss
+++ b/frontend/src/components/CreativeSection/CreativeSection.scss
@@ -167,7 +167,10 @@
         }
     }
 
-    &__button {
+    &__link {
         margin-top: 58px;
+        width: max-content;
     }
+
+    &__button {}
 }
