--- a/frontend/src/components/BelieveSection/BelieveSection.scss
+++ b/frontend/src/components/BelieveSection/BelieveSection.scss
@@ -152,7 +152,10 @@
 
     &__feature-text {}
 
-    &__button {
+    &__link {
         margin-top: 46px;
+        width: max-content;
     }
+
+    &__button {}
 }
