feat(product-card): create isCartItem prop for ProductCard component

--- a/frontend/src/components/CartSection/CartSection.scss
+++ b/frontend/src/components/CartSection/CartSection.scss
@@ -27,6 +27,11 @@
     &__product-list {
         display: flex;
         flex-direction: column;
-        gap: 30px;
+        width: 100%;
+        gap: 50px;
+
+        @include mobile {
+            gap: 25px;
+        }
     }
 }
