--- a/frontend/src/components/ProductCard/ProductCard.scss
+++ b/frontend/src/components/ProductCard/ProductCard.scss
@@ -100,3 +100,15 @@
         }
     }
 }
+
+.product-card--cart-item {
+    width: 100%;
+
+    @include tablet {
+        width: 100%;
+    }
+
+    @include mobile {
+        width: 100%;
+    }
+}
