--- a/frontend/src/components/CartProductItem/CartProductItem.scss
+++ b/frontend/src/components/CartProductItem/CartProductItem.scss
@@ -1,18 +1,39 @@
+@use "../../styles/index" as *;
+
 .cart-item {
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 70%;
+    margin-inline: auto;
+    align-items: center;
 
     &__content {
         display: flex;
         flex-direction: column;
     }
 
-    &__controls {}
+    &__controls {
+        display: flex;
+        align-items: center;
+    }
 
-    &__label {}
+    &__label {
+        @include fluid-text(20, 16);
+        @include font(var(--font-family), 700, 1);
+        color: var(--color-blue);
+    }
 
-    &__input {}
+    &__input {
+        border: var(--border-bold);
+        height: 80px;
+        width: 135px;
+        border-radius: 16px;
+        margin-inline: 20px;
+        color: var(--color-blue);
+        text-align: center;
+    }
 
-    &__button--delete {}
+    &__button--delete {
+        color: #e03737;
+    }
 }
