styles(cartitem): write adaptive SCSS styles for CartProductItem component

--- a/frontend/src/components/CartProductItem/CartProductItem.scss
+++ b/frontend/src/components/CartProductItem/CartProductItem.scss
@@ -3,9 +3,26 @@
 .cart-item {
     display: flex;
     justify-content: space-between;
-    width: 70%;
+    width: 75%;
     margin-inline: auto;
     align-items: center;
+    background-color: var(--color-lightgray);
+    padding: 15px;
+    border-radius: 30px;
+
+    @include tablet {
+        width: 100%;
+    }
+
+    @include mobile {
+        border-radius: 18px;
+    }
+
+    @include mobile-small {
+        flex-direction: column-reverse;
+        gap: 30px;
+        align-items: start;
+    }
 
     &__content {
         display: flex;
@@ -15,12 +32,37 @@
     &__controls {
         display: flex;
         align-items: center;
+        margin-right: 30px;
+
+        @include mobile {
+            flex-direction: column-reverse;
+            align-items: center;
+            gap: 25px;
+        }
+
+        @include mobile-small {
+            align-items: start;
+            margin-right: 0;
+            margin-top: 15px;
+            margin-left: 30px;
+        }
     }
 
     &__label {
         @include fluid-text(20, 16);
         @include font(var(--font-family), 700, 1);
         color: var(--color-blue);
+
+        @include mobile {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+        }
+
+        @include mobile-small {
+            align-items: start;
+        }
     }
 
     &__input {
@@ -31,9 +73,30 @@
         margin-inline: 20px;
         color: var(--color-blue);
         text-align: center;
+        background-color: transparent;
+
+        @include mobile {
+            margin: 0;
+        }
     }
 
     &__button--delete {
-        color: #e03737;
+        transition: transform var(--transition);
+
+        @include desktop-screen {
+
+            &:hover,
+            &:focus-visible {
+                transform: scale(1.05);
+            }
+        }
+
+        @include touch-screen {
+
+            &:hover,
+            &:focus-visible {
+                transform: none;
+            }
+        }
     }
 }
