styles(header): write adaptive SCSS styles for DropdownSearch in Header component

--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -225,6 +225,11 @@
         padding: 25px;
         padding-top: 50px;
         transition: opacity var(--transition);
+
+        @include mobile {
+            padding: 25px;
+            padding-top: 45px;
+        }
     }
 
     &__dropdown-list-wrap {
