--- a/frontend/src/components/PaymentSection/PaymentSection.scss
+++ b/frontend/src/components/PaymentSection/PaymentSection.scss
@@ -4,6 +4,22 @@
 
     &__inner {
         padding-block: 120px;
+
+        @include laptop {
+            padding-block: 100px;
+        }
+
+        @include tablet {
+            padding-block: 80px;
+        }
+
+        @include mobile {
+            padding-block: 60px;
+        }
+
+        @include mobile-small {
+            padding-block: 40px;
+        }
     }
 
     &__row {}
@@ -14,6 +30,10 @@
         display: flex;
         flex-wrap: wrap;
         gap: 50px;
+
+        @include mobile {
+            gap: 25px;
+        }
     }
 
     &__title {
@@ -28,6 +48,10 @@
         @include fluid-text(18, 16);
         @include font(var(--font-family), 600, 1);
         color: var(--color-blue);
+
+        @include mobile {
+            width: 100%;
+        }
     }
 
     &__label--name {}
@@ -55,24 +79,24 @@
     &__card-wrap {
         display: flex;
         flex-wrap: wrap;
-        width: 20%;
+        width: 285px;
         gap: 20px;
     }
 
     &__label--card-date {
-        width: calc(50% - 10px);
+        width: 135px;
     }
 
     &__input--card-date {
-        padding-inline: 39px;
+        padding-inline: 40px;
     }
 
     &__label--cvv {
-        width: calc(50% - 10px);
+        width: 130px;
     }
 
     &__input--cvv {
-        padding-inline: 46px;
+        padding-inline: 40px;
     }
 
     &__label--card-number {
@@ -86,6 +110,10 @@
         padding: 75px 45px;
         border-radius: 30px;
         background-color: var(--color-lightgray);
+
+        @include mobile-small {
+            padding: 60px 30px;
+        }
     }
 
     &__details {
