--- a/frontend/src/components/ThankYouSection/ThankYouSection.scss
+++ b/frontend/src/components/ThankYouSection/ThankYouSection.scss
@@ -8,8 +8,32 @@
     background-position: center;
     margin-bottom: 120px;
 
+    @include mobile {
+        margin-bottom: 60px;
+    }
+
+    @include mobile-small {
+        background-position: -400px center;
+    }
+
     &__inner {
         padding-block: 320px;
+
+        @include laptop {
+            padding-block: 280px;
+        }
+
+        @include tablet {
+            padding-block: 240px;
+        }
+
+        @include mobile {
+            padding-block: 200px;
+        }
+
+        @include mobile-small {
+            padding-block: 160px;
+        }
     }
 
     &__row {}
@@ -18,9 +42,17 @@
         gap: 30px;
     }
 
-    &__title {}
+    &__title {
+        @include mobile-small {
+            width: 60%;
+        }
+    }
 
     &__title--green {
         color: var(--color-darkgreen);
+    }
+
+    &__link {
+        width: max-content;
     }
 }
