--- a/frontend/src/components/ProtectedSection/ProtectedSection.scss
+++ b/frontend/src/components/ProtectedSection/ProtectedSection.scss
@@ -69,32 +69,11 @@
         flex: 1;
     }
 
-    &__label {
-        display: flex;
-        width: 100% !important;
-        flex-direction: column;
-        gap: 25px;
-        width: calc(50% - 25px);
-        @include fluid-text(18, 16);
-        @include font(var(--font-family), 600, 1);
-        color: var(--color-blue);
-    }
+    &__label {}
 
     &__input {}
 
-    &__input--password {
-        width: 100%;
-        padding: 28px 23px;
-        border-radius: 16px;
-        border: var(--border-green);
-        @include fluid-text(18, 14);
-        @include font(var(--second-family), 400, 1);
-        color: var(--color-darkgray);
-
-        &::placeholder {
-            font-style: italic;
-        }
-    }
+    &__input--password {}
 
     &__input--submit {
         margin-top: 25px;
