--- a/frontend/src/components/PaymentSection/PaymentSection.scss
+++ b/frontend/src/components/PaymentSection/PaymentSection.scss
@@ -40,14 +40,12 @@
         width: 100%;
     }
 
+    &__title--card {
+        margin-top: 30px;
+    }
+
     &__label {
-        display: flex;
-        flex-direction: column;
-        gap: 25px;
         width: calc(50% - 25px);
-        @include fluid-text(18, 16);
-        @include font(var(--font-family), 600, 1);
-        color: var(--color-blue);
 
         @include mobile {
             width: 100%;
@@ -56,15 +54,7 @@
 
     &__label--name {}
 
-    &__input {
-        padding: 28px 23px;
-        border-radius: 16px;
-        border: var(--border-green);
-        @include fluid-text(18, 14);
-        @include font(var(--second-family), 400, 1);
-        color: var(--color-darkgray);
-        font-style: italic;
-    }
+    &__input {}
 
     &__input--name {}
 
@@ -107,6 +97,7 @@
 
     &__details-wrap {
         width: 100%;
+        margin-top: 30px;
         padding: 75px 45px;
         border-radius: 30px;
         background-color: var(--color-lightgray);
