feat(productitemsection): display product information on its own page

--- a/frontend/src/components/ProductItemSection/ProductItemSection.scss
+++ b/frontend/src/components/ProductItemSection/ProductItemSection.scss
@@ -62,7 +62,10 @@
         z-index: 1;
     }
 
-    &__image {}
+    &__image {
+        filter: brightness(0.97);
+        border-radius: 30px;
+    }
 
     &__column--2 {
         width: 52%;
