--- a/frontend/src/styles/_globals.scss
+++ b/frontend/src/styles/_globals.scss
@@ -6,6 +6,8 @@
 
 // In processing ...
 
+@use "./media" as *;
+
 a,
 a:hover,
 a:visited,
@@ -45,6 +47,32 @@ input[type="number"]::-webkit-inner-spin-button {
 *:focus,
 *:focus-visible {
     outline: none;
+}
+
+.Toastify__toast-container {}
+
+.Toastify__toast {
+    padding: 32px !important;
+    border-radius: 18px;
+
+    @include mobile-small {
+        width: 80%;
+        top: 20px;
+        right: 15px;
+    }
+}
+
+.Toastify__toast-icon {
+    color: var(--color-green);
+}
+
+.Toastify__close-button {
+    top: 12px;
+    right: 12px;
+}
+
+.Toastify__progress-bar--wrp {
+    opacity: 0;
 }
 
 // *:focus,
