--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -13,6 +13,7 @@
     --color-darkgreen: #6E9f80;
     --color-yellow: #EFD372;
     --color-darkyellow: #E7CD6E;
+    --color-red: #C95F5F;
     --color-orange: #FFA858;
     --color-gray: #D4D4D4;
     --color-darkgray: #525C60;
