feat(payment): implement the ability to pay for orders (with a letter to email)

--- a/frontend/src/components/CartSection/CartSection.scss
+++ b/frontend/src/components/CartSection/CartSection.scss
@@ -108,4 +108,13 @@
     &__button {
         margin-top: 30px;
     }
+
+    &__text--empty {
+        text-align: center;
+        padding-block: 150px;
+
+        @include mobile {
+            padding-block: 100px;
+        }
+    }
 }
