fix(app): refactor the user interface, logic, eliminate some bugs and inaccuracies in the application

--- a/frontend/src/components/WhyUsSection/WhyUsSection.scss
+++ b/frontend/src/components/WhyUsSection/WhyUsSection.scss
@@ -171,7 +171,13 @@
         }
     }
 
-    &__feature {}
+    &__feature {
+        height: 350px;
+
+        @include mobile-small {
+            height: 320px;
+        }
+    }
 }
 
 .feature {
