--- a/frontend/src/components/CartSection/CartSection.scss
+++ b/frontend/src/components/CartSection/CartSection.scss
@@ -76,6 +76,13 @@
         margin-bottom: 15px;
     }
 
+    &__count--any {
+        position: relative;
+        top: -3px;
+        padding-left: 15px;
+        color: var(--color-red) !important;
+    }
+
     &__details {
         @include fluid-text(25, 18);
         @include font(var(--font-family), 400, 1.2);
@@ -116,5 +123,9 @@
         @include mobile {
             padding-block: 100px;
         }
+    }
+
+    &__link {
+        width: max-content;
     }
 }
