--- a/frontend/src/components/ReviewsSection/ReviewsSection.scss
+++ b/frontend/src/components/ReviewsSection/ReviewsSection.scss
@@ -170,6 +170,11 @@
     .swiper-slide,
     .swiper-wrapper {
         width: 100% !important;
+        padding-bottom: 10px;
+
+        @include mobile {
+            padding-bottom: 0;
+        }
     }
 
     .swiper {
