fix(app): fix file paths in components

--- a/src/components/CategoriesListSection/CategoriesListSection.scss
+++ b/src/components/CategoriesListSection/CategoriesListSection.scss
@@ -105,15 +105,15 @@
     }
 
     &__category--1 {
-        background-image: url("../../images/images/organic-juice.png");
+        background-image: url("../../assets/images/decorative/organic-juice.webp");
     }
 
     &__category--2 {
-        background-image: url("../../images/images/organic-food.png");
+        background-image: url("../../assets/images/decorative/organic-food.webp");
     }
 
     &__category--3 {
-        background-image: url("../../images/images/nuts-cookis.png");
+        background-image: url("../../assets/images/decorative/nuts-cookis.webp");
     }
 
     &__button {
