--- a/src/components/EcoSection/EcoSection.scss
+++ b/src/components/EcoSection/EcoSection.scss
@@ -21,7 +21,7 @@
     }
 
     &__column--1 {
-        background-image: url("../../images/images/eco-field.png");
+        background-image: url("../../assets/images/decorative/eco-field.webp");
         background-repeat: no-repeat;
         background-size: cover;
 
