--- a/src/components/NotFoundSection/NotFoundSection.scss
+++ b/src/components/NotFoundSection/NotFoundSection.scss
@@ -1,7 +1,7 @@
 @use "../../styles/index" as *;
 
 .not-found {
-    background-image: url("../../images/images/background-not-found.png");
+    background-image: url("../../assets/images/background/background-not-found.webp");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
