--- a/src/components/ReviewsSection/ReviewsSection.scss
+++ b/src/components/ReviewsSection/ReviewsSection.scss
@@ -1,7 +1,7 @@
 @use "../../styles/index" as *;
 
 .reviews {
-    background-image: url("../../images/images/cinnamon.png");
+    background-image: url("../../assets/images/decorative/cinnamon.webp");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
