--- a/src/components/ThankYouSection/ThankYouSection.scss
+++ b/src/components/ThankYouSection/ThankYouSection.scss
@@ -2,7 +2,7 @@
 
 .thank-you {
     max-width: 100% !important;
-    background-image: url("../../images/images/background-thank-you.png");
+    background-image: url("../../assets/images/background/background-thank-you.webp");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
