--- a/src/components/UtilsIntroBlock/UtilsIntroBlock.scss
+++ b/src/components/UtilsIntroBlock/UtilsIntroBlock.scss
@@ -1,7 +1,7 @@
 @use "../../styles/index" as *;
 
 .utils-intro {
-    background-image: url("../../images/images/background-util-page.png");
+    background-image: url("../../assets/images/background/background-util-page.webp");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
