--- a/src/components/CouponsSection/CouponsSection.scss
+++ b/src/components/CouponsSection/CouponsSection.scss
@@ -66,7 +66,7 @@
     }
 
     &__coupon--1 {
-        background-image: url("../../images/images/coupon-tropical.png");
+        background-image: url("../../assets/images/decorative/coupon-tropical.webp");
 
         & .coupons__promo {
             color: var(--color-white);
@@ -78,7 +78,7 @@
     }
 
     &__coupon--2 {
-        background-image: url("../../images/images/coupon-forest.png");
+        background-image: url("../../assets/images/decorative/coupon-forest.webp");
 
         & .coupons__promo {
             color: var(--color-green);
