--- a/src/components/CreativeSection/CreativeSection.scss
+++ b/src/components/CreativeSection/CreativeSection.scss
@@ -9,7 +9,7 @@
             content: "";
             position: absolute;
             inset: 0;
-            background-image: url("../../images/images/accredited-farmers-fruits.png");
+            background-image: url("../../assets/images/decorative/accredited-farmers-fruits-blurred.webp");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: 250px center;
@@ -143,7 +143,7 @@
             &::after {
                 width: 51px;
                 height: 48px;
-                background-image: url("../../images/icons/modern-agriculture.svg");
+                background-image: url("../../assets/icons/modern-agriculture.svg");
             }
         }
 
@@ -154,7 +154,7 @@
             &::after {
                 width: 56px;
                 height: 56px;
-                background-image: url("../../images/icons/no-hormones.svg");
+                background-image: url("../../assets/icons/no-hormones.svg");
             }
         }
     }
