--- a/src/components/LocationSection/LocationSection.scss
+++ b/src/components/LocationSection/LocationSection.scss
@@ -29,7 +29,7 @@
     &__block {
         display: flex;
         justify-content: end;
-        background-image: url("../../images/images/leaf.png");
+        background-image: url("../../assets/images/decorative/leaf.webp");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -85,7 +85,7 @@
             content: "";
             width: 50px;
             height: 50px;
-            background-image: url("../../images/icons/location.svg");
+            background-image: url("../../assets/icons/location.svg");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
