--- a/src/components/SubscribeSection/SubscribeSection.scss
+++ b/src/components/SubscribeSection/SubscribeSection.scss
@@ -12,7 +12,7 @@
         border-radius: 32px;
         padding: 105px 70px;
         justify-content: space-between;
-        background-image: url("../../images/images/ice-orange.png");
+        background-image: url("../../assets/images/decorative/ice-orange.webp");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
