perf(components): break some components into their component parts for convenience and readability

--- a/src/components/IntroBlockPortfolioItem/IntroBlockPortfolioItem.scss
+++ b/src/components/IntroBlockPortfolioItem/IntroBlockPortfolioItem.scss
@@ -91,7 +91,7 @@
         }
     }
 
-    &__description-list-pair {
+    &__description-list-item {
         display: flex;
         justify-content: space-between;
     }
