--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -126,44 +126,8 @@
         }
     }
 
-    &__list--social-networks {
-        margin-top: 50px;
-        display: flex;
+    .social-networks {
         margin-inline: auto;
-        gap: 15px;
-    }
-
-    &__link--social-networks {
-        & svg {
-            color: var(--color-blue);
-            fill: #EFF6F1;
-            transition: fill var(--transition);
-
-            @include tablet {
-                width: 40px;
-                height: 40px;
-            }
-        }
-
-        @include desktop-screen {
-
-            &:hover,
-            &:focus-visible {
-                & svg {
-                    fill: #E4E7E5;
-                }
-            }
-        }
-
-        @include touch-screen {
-
-            &:hover,
-            &:focus-visible {
-                & svg {
-                    fill: #EFF6F1;
-                }
-            }
-        }
     }
 
     &__column--3 {
